# projeto_dbt_bigquery

./: .user.yml  README.md  dbt_project.yml  pyproject.toml
macros/: cents_to_dollars.sql
models/marts/: select_all_except.sql
models/staging/: stg_orders.sql
seeds/: raw_stores.csv
snapshots/: stores_snapshot.sql
