[tool.poetry]
name = "projeto-dbt-bigquery"
version = "0.1.0"
description = "Repositorio do projeto"
authors = ["matheusmafraoandrade <matheusmafrabh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
dbt-core = "^1.8.3"
dbt-bigquery = "^1.8.2"
taskipy = "^1.13.0"
sqlfluff-templater-dbt = "^3.0.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
fix = "sqlfluff fix snapshots && sqlfluff fix models"
